# django-csv-downloads

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG  README.md  pyproject.toml  tox.ini
.github/workflows/: tox.yml
django_csv/: __init__.py  admin.py  apps.py  csv.py  models.py  s3.py  settings.py  sftp.py  types.py  views.py
django_csv/migrations/: 0001_initial.py  0002_swap_csv_download_columns_field_to_textfield.py
tests/: admin.py  settings.py  test_csv.py  test_s3.py  test_sftp.py  test_views.py  urls.py  views.py
