[tool.poetry]
name = "django-csv-downloads"
version = "1.3"
description = "Django app for enabling and tracking CSV downloads"
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.md"
homepage = "https://github.com/yunojuno/django-csv-downloads"
repository = "https://github.com/yunojuno/django-csv-downloads"
documentation = "https://github.com/yunojuno/django-csv-downloads"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{ include = "django_csv" }]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2 || ^4.0 || ^5.0"
boto3 = { version = "*", optional = true }
paramiko = {version = "*", optional = true}
types-paramiko = "^3.3.0.0"

[tool.poetry.dev-dependencies]
black = "*"
coverage = "*"
mypy = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
tox = "*"
types-paramiko = "*"

[tool.poetry.extras]
s3 = ["boto3"]
sftp = ["paramiko"]
test = ["boto3", "paramiko"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
